crates/build/tests/snapshots/abi_generation__simple_struct_abi.snap
---
source: crates/build/tests/abi_generation.rs
expression: abi
---
[
  {
    "inputs": [
      {
        "components": [
          {
            "internalType": "address",
            "name": "recipient",
            "type": "address"
          },
          {
            "internalType": "uint256",
            "name": "amount",
            "type": "uint256"
          },
          {
            "internalType": "uint256",
            "name": "deadline",
            "type": "uint256"
          },
          {
            "internalType": "uint64",
            "name": "nonce",
            "type": "uint64"
          }
        ],
        "internalType": "struct TransferParams",
        "name": "params",
        "type": "tuple"
      }
    ],
    "name": "transfer",
    "outputs": [
      {
        "internalType": "bool",
        "name": "_0",
        "type": "bool"
      }
    ],
    "stateMutability": "payable",
    "type": "function"
  },
  {
    "inputs": [
      {
        "internalType": "uint256",
        "name": "tx_id",
        "type": "uint256"
      }
    ],
    "name": "getReceipt",
    "outputs": [
      {
        "components": [
          {
            "internalType": "bool",
            "name": "success",
            "type": "bool"
          },
          {
            "internalType": "bytes32",
            "name": "tx_hash",
            "type": "bytes32"
          },
          {
            "internalType": "uint256",
            "name": "gas_used",
            "type": "uint256"
          },
          {
            "internalType": "uint256",
            "name": "block_number",
            "type": "uint256"
          }
        ],
        "internalType": "struct TransferReceipt",
        "name": "_0",
        "type": "tuple"
      }
    ],
    "stateMutability": "view",
    "type": "function"
  },
  {
    "inputs": [
      {
        "components": [
          {
            "internalType": "address",
            "name": "recipient",
            "type": "address"
          },
          {
            "internalType": "uint256",
            "name": "amount",
            "type": "uint256"
          },
          {
            "internalType": "uint256",
            "name": "deadline",
            "type": "uint256"
          },
          {
            "internalType": "uint64",
            "name": "nonce",
            "type": "uint64"
          }
        ],
        "internalType": "struct TransferParams",
        "name": "params",
        "type": "tuple"
      }
    ],
    "name": "executeTransfer",
    "outputs": [
      {
        "components": [
          {
            "internalType": "bool",
            "name": "success",
            "type": "bool"
          },
          {
            "internalType": "bytes32",
            "name": "tx_hash",
            "type": "bytes32"
          },
          {
            "internalType": "uint256",
            "name": "gas_used",
            "type": "uint256"
          },
          {
            "internalType": "uint256",
            "name": "block_number",
            "type": "uint256"
          }
        ],
        "internalType": "struct TransferReceipt",
        "name": "_0",
        "type": "tuple"
      }
    ],
    "stateMutability": "payable",
    "type": "function"
  },
  {
    "inputs": [
      {
        "internalType": "address",
        "name": "to",
        "type": "address"
      },
      {
        "internalType": "uint256",
        "name": "amount",
        "type": "uint256"
      }
    ],
    "name": "simpleTransfer",
    "outputs": [
      {
        "internalType": "bool",
        "name": "_0",
        "type": "bool"
      }
    ],
    "stateMutability": "payable",
    "type": "function"
  }
]
